fix for Safari where YT iframe was invisible

--- a/page/sass/product.scss
+++ b/page/sass/product.scss
@@ -120,6 +120,7 @@
 #product-video-foreground {
   opacity: 0.3;
   overflow: hidden;
+  height: 100%; // fix for Safari
 }
 
 #product-video-fullscreen {
